# xdiff

./: Cargo.toml
examples/: config.rs
fixtures/: config.yaml
src/: cli.rs  config.rs  lib.rs  main.rs
