[package]
name = "xdiff"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
console = "0.15.8"
http = "1.1.0"
http-serde = "2.1.1"
reqwest = { version = "0.12.8", default-features = false }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
serde_yaml = "0.9.34+deprecated"
similar = { version = "2.6.0", features = ["bytes", "inline"] }
tokio = { version = "1.41.0", features = ["full"] }
url = { version = "2.5.2", features = ["serde"] }
